--- a/frontend/src/InfoEnergia.css
+++ b/frontend/src/InfoEnergia.css
@@ -1,12 +1,13 @@
 /* Fondo principal con imagen solar suave */
 .info-container {
+    min-height: 100vh;
+    width: 100%;
+    padding: 2rem 1rem;
     background: linear-gradient(135deg, rgba(245, 247, 250, 0.8), rgba(200, 230, 200, 0.6)),
                 url('/public/imagen_fondo.png') center/cover no-repeat;
-    padding: 40px;
     border-radius: 10px;
     box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
 }
-
 /* Título principal con subrayado elegante */
 .info-title {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -48,6 +49,7 @@
     border-radius: 10px;
     overflow: hidden;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    padding-inline-end: 20px;
 }
 
 .custom-card:hover {
@@ -84,6 +86,7 @@
     transform: translateY(-2px);
     box-shadow: 0 8px 20px rgba(37, 107, 39, 0.5);
 }
+
 
 /* Descripción de los botones */
 .button-description {
